--- a/module_1/Project_1.ipynb
+++ b/module_1/Project_1.ipynb
@@ -69,143 +69,143 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1196</th>\n",
-       "      <td>tt1606378</td>\n",
-       "      <td>92000000</td>\n",
-       "      <td>304654182</td>\n",
-       "      <td>A Good Day to Die Hard</td>\n",
-       "      <td>Bruce Willis|Jai Courtney|Sebastian Koch|Mary ...</td>\n",
-       "      <td>John Moore</td>\n",
-       "      <td>Yippee Ki-Yay Mother Russia</td>\n",
-       "      <td>Iconoclastic, take-no-prisoners cop John McCla...</td>\n",
-       "      <td>98</td>\n",
-       "      <td>Action|Thriller</td>\n",
-       "      <td>Ingenious Media|Twentieth Century Fox Film Cor...</td>\n",
-       "      <td>2/6/2013</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>2013</td>\n",
+       "      <th>731</th>\n",
+       "      <td>tt1570728</td>\n",
+       "      <td>50000000</td>\n",
+       "      <td>142851197</td>\n",
+       "      <td>Crazy, Stupid, Love.</td>\n",
+       "      <td>Steve Carell|Julianne Moore|Ryan Gosling|Emma ...</td>\n",
+       "      <td>Glenn Ficarra|John Requa</td>\n",
+       "      <td>This Is Stupid</td>\n",
+       "      <td>Cal Weaver is living the American dream. He ha...</td>\n",
+       "      <td>118</td>\n",
+       "      <td>Comedy|Drama|Romance</td>\n",
+       "      <td>Warner Bros.</td>\n",
+       "      <td>7/29/2011</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>2011</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>559</th>\n",
-       "      <td>tt0180734</td>\n",
-       "      <td>32000000</td>\n",
-       "      <td>40222729</td>\n",
-       "      <td>Hardball</td>\n",
-       "      <td>Keanu Reeves|Diane Lane|Michael B. Jordan|D. B...</td>\n",
-       "      <td>Brian Robbins</td>\n",
-       "      <td>The most important thing in life is showing up</td>\n",
-       "      <td>An aimless young man who is scalping tickets, ...</td>\n",
-       "      <td>106</td>\n",
-       "      <td>Comedy|Romance</td>\n",
-       "      <td>Paramount Pictures|GHS Productions KG|Munich F...</td>\n",
-       "      <td>9/14/2001</td>\n",
-       "      <td>6.4</td>\n",
+       "      <th>525</th>\n",
+       "      <td>tt0268397</td>\n",
+       "      <td>25000000</td>\n",
+       "      <td>80936232</td>\n",
+       "      <td>Jimmy Neutron: Boy Genius</td>\n",
+       "      <td>Debi Derryberry|Megan Cavanagh|Mark DeCarlo|Je...</td>\n",
+       "      <td>John A. Davis</td>\n",
+       "      <td>He may be small, but he's got a big brain!</td>\n",
+       "      <td>Jimmy Neutron is a boy genius and way ahead of...</td>\n",
+       "      <td>83</td>\n",
+       "      <td>Adventure|Fantasy|Animation|Action|Comedy</td>\n",
+       "      <td>Nickelodeon Movies|Universal Cartoon Studios|P...</td>\n",
+       "      <td>12/21/2001</td>\n",
+       "      <td>5.5</td>\n",
        "      <td>2001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1176</th>\n",
-       "      <td>tt0325055</td>\n",
-       "      <td>7000000</td>\n",
-       "      <td>10000000</td>\n",
-       "      <td>Sylvia</td>\n",
-       "      <td>Gwyneth Paltrow|Daniel Craig|Jared Harris|Mich...</td>\n",
-       "      <td>Christine Jeffs</td>\n",
-       "      <td>Life was too small to contain her...</td>\n",
-       "      <td>Story of the relationship between the poets Te...</td>\n",
-       "      <td>109</td>\n",
-       "      <td>Drama|Romance</td>\n",
-       "      <td>Focus Films</td>\n",
-       "      <td>10/17/2003</td>\n",
-       "      <td>5.6</td>\n",
-       "      <td>2003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1419</th>\n",
-       "      <td>tt0405325</td>\n",
+       "      <th>73</th>\n",
+       "      <td>tt1029360</td>\n",
        "      <td>35000000</td>\n",
-       "      <td>86369815</td>\n",
-       "      <td>Sky High</td>\n",
-       "      <td>Michael Angarano|Kurt Russell|Kelly Preston|Da...</td>\n",
-       "      <td>Mike Mitchell</td>\n",
-       "      <td>Saving The World... One Homework Assignment At...</td>\n",
-       "      <td>Set in a world where superheroes are commonly ...</td>\n",
-       "      <td>100</td>\n",
-       "      <td>Adventure|Comedy|Family</td>\n",
-       "      <td>Walt Disney Pictures|Gunn Films|Max Stronghold...</td>\n",
-       "      <td>7/29/2005</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>2005</td>\n",
+       "      <td>95437994</td>\n",
+       "      <td>Poltergeist</td>\n",
+       "      <td>Sam Rockwell|Rosemarie DeWitt|Saxon Sharbino|K...</td>\n",
+       "      <td>Gil Kenan</td>\n",
+       "      <td>They're Here. And They Know What Scares You.</td>\n",
+       "      <td>Legendary filmmaker Sam Raimi and director Gil...</td>\n",
+       "      <td>93</td>\n",
+       "      <td>Horror|Thriller</td>\n",
+       "      <td>Ghost House Pictures|Vertigo Entertainment|Met...</td>\n",
+       "      <td>5/20/2015</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1515</th>\n",
-       "      <td>tt0414853</td>\n",
-       "      <td>51000000</td>\n",
-       "      <td>72779000</td>\n",
-       "      <td>Barnyard</td>\n",
-       "      <td>Courteney Cox|Kevin James|Sam Elliott|Danny Gl...</td>\n",
-       "      <td>Steve Oedekerk</td>\n",
-       "      <td>What happens in the barn stays in the barn</td>\n",
-       "      <td>When things get crazy at the farm, it's up to ...</td>\n",
-       "      <td>90</td>\n",
-       "      <td>Animation|Comedy|Family</td>\n",
-       "      <td>Paramount Pictures|Nickelodeon Movies|Paramoun...</td>\n",
-       "      <td>8/4/2006</td>\n",
-       "      <td>5.3</td>\n",
-       "      <td>2006</td>\n",
+       "      <th>428</th>\n",
+       "      <td>tt1270761</td>\n",
+       "      <td>25000000</td>\n",
+       "      <td>36993168</td>\n",
+       "      <td>Don't Be Afraid of the Dark</td>\n",
+       "      <td>Katie Holmes|Guy Pearce|Bailee Madison|Alan Da...</td>\n",
+       "      <td>Troy Nixey</td>\n",
+       "      <td>Fear is never just make believe</td>\n",
+       "      <td>A young girl sent to live with her father and ...</td>\n",
+       "      <td>99</td>\n",
+       "      <td>Fantasy|Horror|Thriller</td>\n",
+       "      <td>Miramax Films|Gran Via Productions|FilmDistric...</td>\n",
+       "      <td>11/6/2010</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>tt1528100</td>\n",
+       "      <td>140000000</td>\n",
+       "      <td>268031828</td>\n",
+       "      <td>Exodus: Gods and Kings</td>\n",
+       "      <td>Christian Bale|Joel Edgerton|John Turturro|Aar...</td>\n",
+       "      <td>Ridley Scott</td>\n",
+       "      <td>Once brothers, now enemies.</td>\n",
+       "      <td>The defiant leader Moses rises up against the ...</td>\n",
+       "      <td>153</td>\n",
+       "      <td>Adventure|Drama|Action</td>\n",
+       "      <td>Scott Free Productions|Chernin Entertainment|B...</td>\n",
+       "      <td>12/3/2014</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>2014</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        imdb_id    budget    revenue          original_title  \\\n",
-       "1196  tt1606378  92000000  304654182  A Good Day to Die Hard   \n",
-       "559   tt0180734  32000000   40222729                Hardball   \n",
-       "1176  tt0325055   7000000   10000000                  Sylvia   \n",
-       "1419  tt0405325  35000000   86369815                Sky High   \n",
-       "1515  tt0414853  51000000   72779000                Barnyard   \n",
+       "       imdb_id     budget    revenue               original_title  \\\n",
+       "731  tt1570728   50000000  142851197         Crazy, Stupid, Love.   \n",
+       "525  tt0268397   25000000   80936232    Jimmy Neutron: Boy Genius   \n",
+       "73   tt1029360   35000000   95437994                  Poltergeist   \n",
+       "428  tt1270761   25000000   36993168  Don't Be Afraid of the Dark   \n",
+       "146  tt1528100  140000000  268031828       Exodus: Gods and Kings   \n",
        "\n",
-       "                                                   cast         director  \\\n",
-       "1196  Bruce Willis|Jai Courtney|Sebastian Koch|Mary ...       John Moore   \n",
-       "559   Keanu Reeves|Diane Lane|Michael B. Jordan|D. B...    Brian Robbins   \n",
-       "1176  Gwyneth Paltrow|Daniel Craig|Jared Harris|Mich...  Christine Jeffs   \n",
-       "1419  Michael Angarano|Kurt Russell|Kelly Preston|Da...    Mike Mitchell   \n",
-       "1515  Courteney Cox|Kevin James|Sam Elliott|Danny Gl...   Steve Oedekerk   \n",
+       "                                                  cast  \\\n",
+       "731  Steve Carell|Julianne Moore|Ryan Gosling|Emma ...   \n",
+       "525  Debi Derryberry|Megan Cavanagh|Mark DeCarlo|Je...   \n",
+       "73   Sam Rockwell|Rosemarie DeWitt|Saxon Sharbino|K...   \n",
+       "428  Katie Holmes|Guy Pearce|Bailee Madison|Alan Da...   \n",
+       "146  Christian Bale|Joel Edgerton|John Turturro|Aar...   \n",
        "\n",
-       "                                                tagline  \\\n",
-       "1196                        Yippee Ki-Yay Mother Russia   \n",
-       "559      The most important thing in life is showing up   \n",
-       "1176               Life was too small to contain her...   \n",
-       "1419  Saving The World... One Homework Assignment At...   \n",
-       "1515         What happens in the barn stays in the barn   \n",
+       "                     director                                       tagline  \\\n",
+       "731  Glenn Ficarra|John Requa                                This Is Stupid   \n",
+       "525             John A. Davis    He may be small, but he's got a big brain!   \n",
+       "73                  Gil Kenan  They're Here. And They Know What Scares You.   \n",
+       "428                Troy Nixey               Fear is never just make believe   \n",
+       "146              Ridley Scott                   Once brothers, now enemies.   \n",
        "\n",
-       "                                               overview  runtime  \\\n",
-       "1196  Iconoclastic, take-no-prisoners cop John McCla...       98   \n",
-       "559   An aimless young man who is scalping tickets, ...      106   \n",
-       "1176  Story of the relationship between the poets Te...      109   \n",
-       "1419  Set in a world where superheroes are commonly ...      100   \n",
-       "1515  When things get crazy at the farm, it's up to ...       90   \n",
+       "                                              overview  runtime  \\\n",
+       "731  Cal Weaver is living the American dream. He ha...      118   \n",
+       "525  Jimmy Neutron is a boy genius and way ahead of...       83   \n",
+       "73   Legendary filmmaker Sam Raimi and director Gil...       93   \n",
+       "428  A young girl sent to live with her father and ...       99   \n",
+       "146  The defiant leader Moses rises up against the ...      153   \n",
        "\n",
-       "                       genres  \\\n",
-       "1196          Action|Thriller   \n",
-       "559            Comedy|Romance   \n",
-       "1176            Drama|Romance   \n",
-       "1419  Adventure|Comedy|Family   \n",
-       "1515  Animation|Comedy|Family   \n",
+       "                                        genres  \\\n",
+       "731                       Comedy|Drama|Romance   \n",
+       "525  Adventure|Fantasy|Animation|Action|Comedy   \n",
+       "73                             Horror|Thriller   \n",
+       "428                    Fantasy|Horror|Thriller   \n",
+       "146                     Adventure|Drama|Action   \n",
        "\n",
-       "                                   production_companies release_date  \\\n",
-       "1196  Ingenious Media|Twentieth Century Fox Film Cor...     2/6/2013   \n",
-       "559   Paramount Pictures|GHS Productions KG|Munich F...    9/14/2001   \n",
-       "1176                                        Focus Films   10/17/2003   \n",
-       "1419  Walt Disney Pictures|Gunn Films|Max Stronghold...    7/29/2005   \n",
-       "1515  Paramount Pictures|Nickelodeon Movies|Paramoun...     8/4/2006   \n",
+       "                                  production_companies release_date  \\\n",
+       "731                                       Warner Bros.    7/29/2011   \n",
+       "525  Nickelodeon Movies|Universal Cartoon Studios|P...   12/21/2001   \n",
+       "73   Ghost House Pictures|Vertigo Entertainment|Met...    5/20/2015   \n",
+       "428  Miramax Films|Gran Via Productions|FilmDistric...    11/6/2010   \n",
+       "146  Scott Free Productions|Chernin Entertainment|B...    12/3/2014   \n",
        "\n",
-       "      vote_average  release_year  \n",
-       "1196           5.2          2013  \n",
-       "559            6.4          2001  \n",
-       "1176           5.6          2003  \n",
-       "1419           5.8          2005  \n",
-       "1515           5.3          2006  "
+       "     vote_average  release_year  \n",
+       "731           6.9          2011  \n",
+       "525           5.5          2001  \n",
+       "73            5.0          2015  \n",
+       "428           5.4          2010  \n",
+       "146           5.6          2014  "
       ]
      },
      "execution_count": 2,
@@ -4956,7 +4956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -4965,7 +4965,7 @@
        "1525"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
