--- a/module_1/Project_1.ipynb
+++ b/module_1/Project_1.ipynb
@@ -69,143 +69,143 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1002</th>\n",
-       "      <td>tt1446192</td>\n",
-       "      <td>145000000</td>\n",
-       "      <td>306941670</td>\n",
-       "      <td>Rise of the Guardians</td>\n",
-       "      <td>Chris Pine|Alec Baldwin|Jude Law|Isla Fisher|H...</td>\n",
-       "      <td>Peter Ramsey</td>\n",
-       "      <td>You better believe.</td>\n",
-       "      <td>When an evil spirit known as Pitch lays down t...</td>\n",
-       "      <td>97</td>\n",
-       "      <td>Fantasy|Animation|Family</td>\n",
-       "      <td>DreamWorks Animation</td>\n",
-       "      <td>11/21/2012</td>\n",
-       "      <td>6.9</td>\n",
-       "      <td>2012</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>435</th>\n",
-       "      <td>tt1179056</td>\n",
-       "      <td>35000000</td>\n",
-       "      <td>115664037</td>\n",
-       "      <td>A Nightmare on Elm Street</td>\n",
-       "      <td>Jackie Earle Haley|Katie Cassidy|Kyle Gallner|...</td>\n",
-       "      <td>Samuel Bayer</td>\n",
-       "      <td>Never Sleep Again.</td>\n",
-       "      <td>The film that brings back horror icon Freddy K...</td>\n",
-       "      <td>95</td>\n",
-       "      <td>Horror|Mystery|Thriller</td>\n",
-       "      <td>New Line Cinema|Platinum Dunes</td>\n",
-       "      <td>4/30/2010</td>\n",
-       "      <td>5.5</td>\n",
+       "      <th>415</th>\n",
+       "      <td>tt1023114</td>\n",
+       "      <td>30000000</td>\n",
+       "      <td>20348249</td>\n",
+       "      <td>The Way Back</td>\n",
+       "      <td>Colin Farrell|Dejan Angelov|DragoÈ™ Bucur|Ed H...</td>\n",
+       "      <td>Peter Weir</td>\n",
+       "      <td>Their escape was just the beginning</td>\n",
+       "      <td>Peter Weir's follow-up to Master &amp;amp; Command...</td>\n",
+       "      <td>133</td>\n",
+       "      <td>Drama|Adventure|History</td>\n",
+       "      <td>Polish Film Institute|Imagenation Abu Dhabi FZ...</td>\n",
+       "      <td>9/3/2010</td>\n",
+       "      <td>6.7</td>\n",
        "      <td>2010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1606</th>\n",
-       "      <td>tt0343135</td>\n",
-       "      <td>42000000</td>\n",
-       "      <td>171963386</td>\n",
-       "      <td>Along Came Polly</td>\n",
-       "      <td>Ben Stiller|Jennifer Aniston|Philip Seymour Ho...</td>\n",
-       "      <td>John Hamburg</td>\n",
-       "      <td>For the most cautious man on Earth, life is ab...</td>\n",
-       "      <td>Reuben Feffer is a guy who's spent his entire ...</td>\n",
-       "      <td>90</td>\n",
-       "      <td>Comedy|Romance</td>\n",
-       "      <td>Universal Pictures|Jersey Films|Loofah Product...</td>\n",
-       "      <td>1/16/2004</td>\n",
-       "      <td>5.7</td>\n",
-       "      <td>2004</td>\n",
+       "      <th>633</th>\n",
+       "      <td>tt1060277</td>\n",
+       "      <td>25000000</td>\n",
+       "      <td>170764026</td>\n",
+       "      <td>Cloverfield</td>\n",
+       "      <td>Lizzy Caplan|Jessica Lucas|Odette Annable|Mich...</td>\n",
+       "      <td>Matt Reeves</td>\n",
+       "      <td>Some Thing Has Found Us</td>\n",
+       "      <td>Five young New Yorkers throw their friend a go...</td>\n",
+       "      <td>85</td>\n",
+       "      <td>Action|Thriller|Science Fiction</td>\n",
+       "      <td>Paramount Pictures|Bad Robot</td>\n",
+       "      <td>1/15/2008</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>2008</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>406</th>\n",
-       "      <td>tt1279935</td>\n",
+       "      <th>580</th>\n",
+       "      <td>tt0255798</td>\n",
+       "      <td>22000000</td>\n",
+       "      <td>84772742</td>\n",
+       "      <td>The Animal</td>\n",
+       "      <td>Rob Schneider|Colleen Haskell|John C. McGinley...</td>\n",
+       "      <td>Luke Greenfield</td>\n",
+       "      <td>He wasn't much of a man... Now he's not much o...</td>\n",
+       "      <td>When loser Marvin Mange is involved in a horri...</td>\n",
+       "      <td>84</td>\n",
+       "      <td>Action|Comedy</td>\n",
+       "      <td>Revolution Studios|Happy Madison Productions</td>\n",
+       "      <td>6/1/2001</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>2001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1287</th>\n",
+       "      <td>tt1621039</td>\n",
        "      <td>55000000</td>\n",
-       "      <td>152263880</td>\n",
-       "      <td>Date Night</td>\n",
-       "      <td>Steve Carell|Tina Fey|Mark Wahlberg|Taraji P. ...</td>\n",
-       "      <td>Shawn Levy</td>\n",
-       "      <td>One ordinary couple. One little white lie.</td>\n",
-       "      <td>The mild-mannered married couple Phil and Clai...</td>\n",
-       "      <td>97</td>\n",
-       "      <td>Comedy</td>\n",
-       "      <td>Twentieth Century Fox Film Corporation|Dune En...</td>\n",
-       "      <td>4/8/2010</td>\n",
-       "      <td>5.9</td>\n",
-       "      <td>2010</td>\n",
+       "      <td>110000000</td>\n",
+       "      <td>Free Birds</td>\n",
+       "      <td>Owen Wilson|Woody Harrelson|Amy Poehler|George...</td>\n",
+       "      <td>Jimmy Hayward</td>\n",
+       "      <td>Hang On To Your Nuggets</td>\n",
+       "      <td>In this irreverent, hilarious, adventurous bud...</td>\n",
+       "      <td>91</td>\n",
+       "      <td>Animation|Comedy|Family</td>\n",
+       "      <td>Reel FX Creative Studios|Relativity Media</td>\n",
+       "      <td>10/30/2013</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>2013</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1196</th>\n",
-       "      <td>tt1606378</td>\n",
-       "      <td>92000000</td>\n",
-       "      <td>304654182</td>\n",
-       "      <td>A Good Day to Die Hard</td>\n",
-       "      <td>Bruce Willis|Jai Courtney|Sebastian Koch|Mary ...</td>\n",
-       "      <td>John Moore</td>\n",
-       "      <td>Yippee Ki-Yay Mother Russia</td>\n",
-       "      <td>Iconoclastic, take-no-prisoners cop John McCla...</td>\n",
-       "      <td>98</td>\n",
-       "      <td>Action|Thriller</td>\n",
-       "      <td>Ingenious Media|Twentieth Century Fox Film Cor...</td>\n",
-       "      <td>2/6/2013</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>2013</td>\n",
+       "      <th>231</th>\n",
+       "      <td>tt1929263</td>\n",
+       "      <td>12000000</td>\n",
+       "      <td>101332962</td>\n",
+       "      <td>Heaven is for Real</td>\n",
+       "      <td>Greg Kinnear|Kelly Reilly|Connor Corum|Thomas ...</td>\n",
+       "      <td>Randall Wallace</td>\n",
+       "      <td>Unlock the mystery</td>\n",
+       "      <td>Heaven is for Real recounts the true story of ...</td>\n",
+       "      <td>99</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>TriStar Pictures|Screen Gems|Roth Films</td>\n",
+       "      <td>4/16/2014</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>2014</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        imdb_id     budget    revenue             original_title  \\\n",
-       "1002  tt1446192  145000000  306941670      Rise of the Guardians   \n",
-       "435   tt1179056   35000000  115664037  A Nightmare on Elm Street   \n",
-       "1606  tt0343135   42000000  171963386           Along Came Polly   \n",
-       "406   tt1279935   55000000  152263880                 Date Night   \n",
-       "1196  tt1606378   92000000  304654182     A Good Day to Die Hard   \n",
+       "        imdb_id    budget    revenue      original_title  \\\n",
+       "415   tt1023114  30000000   20348249        The Way Back   \n",
+       "633   tt1060277  25000000  170764026         Cloverfield   \n",
+       "580   tt0255798  22000000   84772742          The Animal   \n",
+       "1287  tt1621039  55000000  110000000          Free Birds   \n",
+       "231   tt1929263  12000000  101332962  Heaven is for Real   \n",
        "\n",
-       "                                                   cast      director  \\\n",
-       "1002  Chris Pine|Alec Baldwin|Jude Law|Isla Fisher|H...  Peter Ramsey   \n",
-       "435   Jackie Earle Haley|Katie Cassidy|Kyle Gallner|...  Samuel Bayer   \n",
-       "1606  Ben Stiller|Jennifer Aniston|Philip Seymour Ho...  John Hamburg   \n",
-       "406   Steve Carell|Tina Fey|Mark Wahlberg|Taraji P. ...    Shawn Levy   \n",
-       "1196  Bruce Willis|Jai Courtney|Sebastian Koch|Mary ...    John Moore   \n",
+       "                                                   cast         director  \\\n",
+       "415   Colin Farrell|Dejan Angelov|DragoÈ™ Bucur|Ed H...       Peter Weir   \n",
+       "633   Lizzy Caplan|Jessica Lucas|Odette Annable|Mich...      Matt Reeves   \n",
+       "580   Rob Schneider|Colleen Haskell|John C. McGinley...  Luke Greenfield   \n",
+       "1287  Owen Wilson|Woody Harrelson|Amy Poehler|George...    Jimmy Hayward   \n",
+       "231   Greg Kinnear|Kelly Reilly|Connor Corum|Thomas ...  Randall Wallace   \n",
        "\n",
        "                                                tagline  \\\n",
-       "1002                                You better believe.   \n",
-       "435                                  Never Sleep Again.   \n",
-       "1606  For the most cautious man on Earth, life is ab...   \n",
-       "406          One ordinary couple. One little white lie.   \n",
-       "1196                        Yippee Ki-Yay Mother Russia   \n",
+       "415                 Their escape was just the beginning   \n",
+       "633                             Some Thing Has Found Us   \n",
+       "580   He wasn't much of a man... Now he's not much o...   \n",
+       "1287                            Hang On To Your Nuggets   \n",
+       "231                                  Unlock the mystery   \n",
        "\n",
        "                                               overview  runtime  \\\n",
-       "1002  When an evil spirit known as Pitch lays down t...       97   \n",
-       "435   The film that brings back horror icon Freddy K...       95   \n",
-       "1606  Reuben Feffer is a guy who's spent his entire ...       90   \n",
-       "406   The mild-mannered married couple Phil and Clai...       97   \n",
-       "1196  Iconoclastic, take-no-prisoners cop John McCla...       98   \n",
+       "415   Peter Weir's follow-up to Master &amp; Command...      133   \n",
+       "633   Five young New Yorkers throw their friend a go...       85   \n",
+       "580   When loser Marvin Mange is involved in a horri...       84   \n",
+       "1287  In this irreverent, hilarious, adventurous bud...       91   \n",
+       "231   Heaven is for Real recounts the true story of ...       99   \n",
        "\n",
-       "                        genres  \\\n",
-       "1002  Fantasy|Animation|Family   \n",
-       "435    Horror|Mystery|Thriller   \n",
-       "1606            Comedy|Romance   \n",
-       "406                     Comedy   \n",
-       "1196           Action|Thriller   \n",
+       "                               genres  \\\n",
+       "415           Drama|Adventure|History   \n",
+       "633   Action|Thriller|Science Fiction   \n",
+       "580                     Action|Comedy   \n",
+       "1287          Animation|Comedy|Family   \n",
+       "231                             Drama   \n",
        "\n",
        "                                   production_companies release_date  \\\n",
-       "1002                               DreamWorks Animation   11/21/2012   \n",
-       "435                      New Line Cinema|Platinum Dunes    4/30/2010   \n",
-       "1606  Universal Pictures|Jersey Films|Loofah Product...    1/16/2004   \n",
-       "406   Twentieth Century Fox Film Corporation|Dune En...     4/8/2010   \n",
-       "1196  Ingenious Media|Twentieth Century Fox Film Cor...     2/6/2013   \n",
+       "415   Polish Film Institute|Imagenation Abu Dhabi FZ...     9/3/2010   \n",
+       "633                        Paramount Pictures|Bad Robot    1/15/2008   \n",
+       "580        Revolution Studios|Happy Madison Productions     6/1/2001   \n",
+       "1287          Reel FX Creative Studios|Relativity Media   10/30/2013   \n",
+       "231             TriStar Pictures|Screen Gems|Roth Films    4/16/2014   \n",
        "\n",
        "      vote_average  release_year  \n",
-       "1002           6.9          2012  \n",
-       "435            5.5          2010  \n",
-       "1606           5.7          2004  \n",
-       "406            5.9          2010  \n",
-       "1196           5.2          2013  "
+       "415            6.7          2010  \n",
+       "633            6.4          2008  \n",
+       "580            4.5          2001  \n",
+       "1287           5.8          2013  \n",
+       "231            6.1          2014  "
       ]
      },
      "execution_count": 2,
@@ -3436,7 +3436,9 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -4983,12 +4985,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
    "source": [
     "for i in range (0, len(actors_list_short)-1):\n",
     "    n = 1\n",
@@ -5000,10 +5000,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "actors_pairs_df.query('frequency == frequency.max()')"
    ]
