--- a/module_1/Project_1.ipynb
+++ b/module_1/Project_1.ipynb
@@ -4985,10 +4985,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "scrolled": true
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for i in range (0, len(actors_list_short)-1):\n",
     "    n = 1\n",
@@ -5000,8 +5000,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "actors_pairs_df.query('frequency == frequency.max()')"
    ]
@@ -5018,14 +5020,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "IfcaRO9-VqAX",
     "outputId": "0f132912-32bb-4196-c98c-abfbc4ad5a5f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'1': '5. Pirates of the Caribbean: On Stranger Tides (tt1298650)',\n",
+       " '2': '2. Gods and Generals (tt0279111)',\n",
+       " '3': '3. Winnie the Pooh (tt1449283)',\n",
+       " '4': '2. 110',\n",
+       " '5': '1. 107',\n",
+       " '6': '5. Avatar (tt0499549)',\n",
+       " '7': '5. The Lone Ranger (tt1210819)',\n",
+       " '8': '1. 1478',\n",
+       " '9': '4. The Dark Knight (tt0468569)',\n",
+       " '10': '5. The Lone Ranger (tt1210819)',\n",
+       " '11': '3. Drama',\n",
+       " '12': '1. Drama',\n",
+       " '13': '5. Peter Jackson',\n",
+       " '14': '3. Robert Rodriguez',\n",
+       " '15': '3. Chris Hemsworth',\n",
+       " '16': '3. Matt Damon',\n",
+       " '17': '2. Action',\n",
+       " '18': '1. K-19: The Widowmaker (tt0267626)',\n",
+       " '19': '5. 2015',\n",
+       " '20': '1. 2014',\n",
+       " '21': '4. Сентябрь',\n",
+       " '22': '2. 450',\n",
+       " '23': '5. Peter Jackson',\n",
+       " '24': '5. Four By Two Productions',\n",
+       " '25': '3. Midnight Picture Show',\n",
+       " '26': '1. Inside Out, The Dark Knight, 12 Years a Slave',\n",
+       " '27': '5. Daniel Radcliffe & Rupert Grint'}"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# в конце можно посмотреть свои ответы к каждому вопросу\n",
     "answers"
@@ -5033,13 +5072,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "SiRmHPl8VqAd"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# и убедиться что ничего не пропустила)\n",
     "len(answers)"
