--- a/module_1/Project_1.ipynb
+++ b/module_1/Project_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
@@ -16,12 +16,13 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from collections import Counter"
+    "from collections import Counter\n",
+    "from itertools import combinations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a",
@@ -69,146 +70,146 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>415</th>\n",
-       "      <td>tt1023114</td>\n",
-       "      <td>30000000</td>\n",
-       "      <td>20348249</td>\n",
-       "      <td>The Way Back</td>\n",
-       "      <td>Colin Farrell|Dejan Angelov|DragoÈ™ Bucur|Ed H...</td>\n",
-       "      <td>Peter Weir</td>\n",
-       "      <td>Their escape was just the beginning</td>\n",
-       "      <td>Peter Weir's follow-up to Master &amp;amp; Command...</td>\n",
-       "      <td>133</td>\n",
-       "      <td>Drama|Adventure|History</td>\n",
-       "      <td>Polish Film Institute|Imagenation Abu Dhabi FZ...</td>\n",
-       "      <td>9/3/2010</td>\n",
-       "      <td>6.7</td>\n",
-       "      <td>2010</td>\n",
+       "      <th>66</th>\n",
+       "      <td>tt3322364</td>\n",
+       "      <td>35000000</td>\n",
+       "      <td>48623572</td>\n",
+       "      <td>Concussion</td>\n",
+       "      <td>Will Smith|Bitsie Tulloch|Gugu Mbatha-Raw|Alec...</td>\n",
+       "      <td>Peter Landesman</td>\n",
+       "      <td>Even Legends Need a Hero</td>\n",
+       "      <td>A dramatic thriller based on the incredible tr...</td>\n",
+       "      <td>123</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>Village Roadshow Pictures|Scott Free Productio...</td>\n",
+       "      <td>11/12/2015</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>2015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>633</th>\n",
-       "      <td>tt1060277</td>\n",
-       "      <td>25000000</td>\n",
-       "      <td>170764026</td>\n",
-       "      <td>Cloverfield</td>\n",
-       "      <td>Lizzy Caplan|Jessica Lucas|Odette Annable|Mich...</td>\n",
-       "      <td>Matt Reeves</td>\n",
-       "      <td>Some Thing Has Found Us</td>\n",
-       "      <td>Five young New Yorkers throw their friend a go...</td>\n",
-       "      <td>85</td>\n",
-       "      <td>Action|Thriller|Science Fiction</td>\n",
-       "      <td>Paramount Pictures|Bad Robot</td>\n",
-       "      <td>1/15/2008</td>\n",
-       "      <td>6.4</td>\n",
-       "      <td>2008</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>580</th>\n",
-       "      <td>tt0255798</td>\n",
-       "      <td>22000000</td>\n",
-       "      <td>84772742</td>\n",
-       "      <td>The Animal</td>\n",
-       "      <td>Rob Schneider|Colleen Haskell|John C. McGinley...</td>\n",
-       "      <td>Luke Greenfield</td>\n",
-       "      <td>He wasn't much of a man... Now he's not much o...</td>\n",
-       "      <td>When loser Marvin Mange is involved in a horri...</td>\n",
-       "      <td>84</td>\n",
-       "      <td>Action|Comedy</td>\n",
-       "      <td>Revolution Studios|Happy Madison Productions</td>\n",
-       "      <td>6/1/2001</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>2001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1287</th>\n",
-       "      <td>tt1621039</td>\n",
-       "      <td>55000000</td>\n",
-       "      <td>110000000</td>\n",
-       "      <td>Free Birds</td>\n",
-       "      <td>Owen Wilson|Woody Harrelson|Amy Poehler|George...</td>\n",
-       "      <td>Jimmy Hayward</td>\n",
-       "      <td>Hang On To Your Nuggets</td>\n",
-       "      <td>In this irreverent, hilarious, adventurous bud...</td>\n",
-       "      <td>91</td>\n",
-       "      <td>Animation|Comedy|Family</td>\n",
-       "      <td>Reel FX Creative Studios|Relativity Media</td>\n",
-       "      <td>10/30/2013</td>\n",
-       "      <td>5.8</td>\n",
+       "      <th>1304</th>\n",
+       "      <td>tt2083355</td>\n",
+       "      <td>17000000</td>\n",
+       "      <td>71625195</td>\n",
+       "      <td>The Best Man Holiday</td>\n",
+       "      <td>Terrence Howard|Harold Perrineau|Morris Chestn...</td>\n",
+       "      <td>Malcolm D. Lee</td>\n",
+       "      <td>Times change. Friendship doesn't.</td>\n",
+       "      <td>When college friends reunite after 15 years ov...</td>\n",
+       "      <td>123</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>Universal</td>\n",
+       "      <td>11/15/2013</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>2013</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>231</th>\n",
-       "      <td>tt1929263</td>\n",
-       "      <td>12000000</td>\n",
-       "      <td>101332962</td>\n",
-       "      <td>Heaven is for Real</td>\n",
-       "      <td>Greg Kinnear|Kelly Reilly|Connor Corum|Thomas ...</td>\n",
-       "      <td>Randall Wallace</td>\n",
-       "      <td>Unlock the mystery</td>\n",
-       "      <td>Heaven is for Real recounts the true story of ...</td>\n",
-       "      <td>99</td>\n",
-       "      <td>Drama</td>\n",
-       "      <td>TriStar Pictures|Screen Gems|Roth Films</td>\n",
-       "      <td>4/16/2014</td>\n",
-       "      <td>6.1</td>\n",
-       "      <td>2014</td>\n",
+       "      <th>1506</th>\n",
+       "      <td>tt0498380</td>\n",
+       "      <td>19000000</td>\n",
+       "      <td>68673228</td>\n",
+       "      <td>Letters from Iwo Jima</td>\n",
+       "      <td>Ken Watanabe|Kazunari Ninomiya|Tsuyoshi Ihara|...</td>\n",
+       "      <td>Clint Eastwood</td>\n",
+       "      <td>The battle of Iwo Jima seen through the eyes o...</td>\n",
+       "      <td>The story of the battle of Iwo Jima between th...</td>\n",
+       "      <td>141</td>\n",
+       "      <td>Action|Adventure|Drama|War</td>\n",
+       "      <td>DreamWorks SKG|Amblin Entertainment|Malpaso Pr...</td>\n",
+       "      <td>12/19/2006</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>2006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>475</th>\n",
+       "      <td>tt1321509</td>\n",
+       "      <td>21000000</td>\n",
+       "      <td>49050886</td>\n",
+       "      <td>Death at a Funeral</td>\n",
+       "      <td>Zoe Saldana|James Marsden|Martin Lawrence|Pete...</td>\n",
+       "      <td>Neil LaBute</td>\n",
+       "      <td>This is one sad family.</td>\n",
+       "      <td>Aaron's father's funeral is today at the famil...</td>\n",
+       "      <td>92</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>Parabolic Pictures|Screen Gems</td>\n",
+       "      <td>4/15/2010</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1566</th>\n",
+       "      <td>tt0372183</td>\n",
+       "      <td>75000000</td>\n",
+       "      <td>288500217</td>\n",
+       "      <td>The Bourne Supremacy</td>\n",
+       "      <td>Matt Damon|Franka Potente|Brian Cox|Julia Stil...</td>\n",
+       "      <td>Paul Greengrass</td>\n",
+       "      <td>They should have left him alone.</td>\n",
+       "      <td>When a CIA operation to purchase classified Ru...</td>\n",
+       "      <td>108</td>\n",
+       "      <td>Action|Drama|Thriller</td>\n",
+       "      <td>Universal Pictures|The Kennedy/Marshall Compan...</td>\n",
+       "      <td>7/23/2004</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>2004</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        imdb_id    budget    revenue      original_title  \\\n",
-       "415   tt1023114  30000000   20348249        The Way Back   \n",
-       "633   tt1060277  25000000  170764026         Cloverfield   \n",
-       "580   tt0255798  22000000   84772742          The Animal   \n",
-       "1287  tt1621039  55000000  110000000          Free Birds   \n",
-       "231   tt1929263  12000000  101332962  Heaven is for Real   \n",
+       "        imdb_id    budget    revenue         original_title  \\\n",
+       "66    tt3322364  35000000   48623572             Concussion   \n",
+       "1304  tt2083355  17000000   71625195   The Best Man Holiday   \n",
+       "1506  tt0498380  19000000   68673228  Letters from Iwo Jima   \n",
+       "475   tt1321509  21000000   49050886     Death at a Funeral   \n",
+       "1566  tt0372183  75000000  288500217   The Bourne Supremacy   \n",
        "\n",
        "                                                   cast         director  \\\n",
-       "415   Colin Farrell|Dejan Angelov|DragoÈ™ Bucur|Ed H...       Peter Weir   \n",
-       "633   Lizzy Caplan|Jessica Lucas|Odette Annable|Mich...      Matt Reeves   \n",
-       "580   Rob Schneider|Colleen Haskell|John C. McGinley...  Luke Greenfield   \n",
-       "1287  Owen Wilson|Woody Harrelson|Amy Poehler|George...    Jimmy Hayward   \n",
-       "231   Greg Kinnear|Kelly Reilly|Connor Corum|Thomas ...  Randall Wallace   \n",
+       "66    Will Smith|Bitsie Tulloch|Gugu Mbatha-Raw|Alec...  Peter Landesman   \n",
+       "1304  Terrence Howard|Harold Perrineau|Morris Chestn...   Malcolm D. Lee   \n",
+       "1506  Ken Watanabe|Kazunari Ninomiya|Tsuyoshi Ihara|...   Clint Eastwood   \n",
+       "475   Zoe Saldana|James Marsden|Martin Lawrence|Pete...      Neil LaBute   \n",
+       "1566  Matt Damon|Franka Potente|Brian Cox|Julia Stil...  Paul Greengrass   \n",
        "\n",
        "                                                tagline  \\\n",
-       "415                 Their escape was just the beginning   \n",
-       "633                             Some Thing Has Found Us   \n",
-       "580   He wasn't much of a man... Now he's not much o...   \n",
-       "1287                            Hang On To Your Nuggets   \n",
-       "231                                  Unlock the mystery   \n",
+       "66                             Even Legends Need a Hero   \n",
+       "1304                  Times change. Friendship doesn't.   \n",
+       "1506  The battle of Iwo Jima seen through the eyes o...   \n",
+       "475                             This is one sad family.   \n",
+       "1566                   They should have left him alone.   \n",
        "\n",
        "                                               overview  runtime  \\\n",
-       "415   Peter Weir's follow-up to Master &amp; Command...      133   \n",
-       "633   Five young New Yorkers throw their friend a go...       85   \n",
-       "580   When loser Marvin Mange is involved in a horri...       84   \n",
-       "1287  In this irreverent, hilarious, adventurous bud...       91   \n",
-       "231   Heaven is for Real recounts the true story of ...       99   \n",
+       "66    A dramatic thriller based on the incredible tr...      123   \n",
+       "1304  When college friends reunite after 15 years ov...      123   \n",
+       "1506  The story of the battle of Iwo Jima between th...      141   \n",
+       "475   Aaron's father's funeral is today at the famil...       92   \n",
+       "1566  When a CIA operation to purchase classified Ru...      108   \n",
        "\n",
-       "                               genres  \\\n",
-       "415           Drama|Adventure|History   \n",
-       "633   Action|Thriller|Science Fiction   \n",
-       "580                     Action|Comedy   \n",
-       "1287          Animation|Comedy|Family   \n",
-       "231                             Drama   \n",
+       "                          genres  \\\n",
+       "66                         Drama   \n",
+       "1304                      Comedy   \n",
+       "1506  Action|Adventure|Drama|War   \n",
+       "475                       Comedy   \n",
+       "1566       Action|Drama|Thriller   \n",
        "\n",
        "                                   production_companies release_date  \\\n",
-       "415   Polish Film Institute|Imagenation Abu Dhabi FZ...     9/3/2010   \n",
-       "633                        Paramount Pictures|Bad Robot    1/15/2008   \n",
-       "580        Revolution Studios|Happy Madison Productions     6/1/2001   \n",
-       "1287          Reel FX Creative Studios|Relativity Media   10/30/2013   \n",
-       "231             TriStar Pictures|Screen Gems|Roth Films    4/16/2014   \n",
+       "66    Village Roadshow Pictures|Scott Free Productio...   11/12/2015   \n",
+       "1304                                          Universal   11/15/2013   \n",
+       "1506  DreamWorks SKG|Amblin Entertainment|Malpaso Pr...   12/19/2006   \n",
+       "475                      Parabolic Pictures|Screen Gems    4/15/2010   \n",
+       "1566  Universal Pictures|The Kennedy/Marshall Compan...    7/23/2004   \n",
        "\n",
        "      vote_average  release_year  \n",
-       "415            6.7          2010  \n",
-       "633            6.4          2008  \n",
-       "580            4.5          2001  \n",
-       "1287           5.8          2013  \n",
-       "231            6.1          2014  "
+       "66             6.9          2015  \n",
+       "1304           7.0          2013  \n",
+       "1506           6.9          2006  \n",
+       "475            5.7          2010  \n",
+       "1566           7.1          2004  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5006,6 +5007,48 @@
    "outputs": [],
    "source": [
     "actors_pairs_df.query('frequency == frequency.max()')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ВАРИАНТ 2 (РАБОЧИЙ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Daniel Radcliffe, Emma Watson)             8\n",
+       "(Daniel Radcliffe, Rupert Grint)            8\n",
+       "(Rupert Grint, Emma Watson)                 7\n",
+       "(Johnny Depp, Helena Bonham Carter)         6\n",
+       "(Ben Stiller, Owen Wilson)                  6\n",
+       "                                           ..\n",
+       "(Benedict Cumberbatch, Keira Knightley)     1\n",
+       "(Kevin Costner, Kevin Pollak)               1\n",
+       "(Max Martini, Chris Mulkey)                 1\n",
+       "(Matthew McConaughey, Izabella Scorupco)    1\n",
+       "(Will Arnett, Elizabeth Banks)              1\n",
+       "Length: 18121, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "actors_pairs_list = []\n",
+    "for j in range (0, len(data)):\n",
+    "    actors_pairs_list.extend(list(combinations(str(data['cast'][j]).split('|'), 2)))\n",
+    "actors_pairs_series = pd.Series(actors_pairs_list)\n",
+    "actors_pairs_series.value_counts()"
    ]
   },
   {
