--- a/module_2/Project_2.ipynb
+++ b/module_2/Project_2.ipynb
@@ -1432,7 +1432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Всё ок, но есть 17 пустых значений. Можно предположить (изучив датасет), что еесли код школы GP - ученик скорее городской, а если MS - скорее за городом. Для сравнения - значения столбца school:*"
+    "*Всё ок, но есть 17 пустых значений. Можно предположить (изучив датасет), что, если код школы GP - ученик скорее городской, а если MS - скорее за городом. Для сравнения - значения столбца school:*"
    ]
   },
   {
