--- a/module_4/Project_4.ipynb
+++ b/module_4/Project_4.ipynb
@@ -15,6 +15,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ссылка на презентацию\n",
+    "https://docs.google.com/presentation/d/1v0Ngv6YXOAiEjAF0i06hHsEhq6uJArtOxhDvB4fG74Y/edit#slide=id.gb928f704d7_0_129"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
