Updates to mod 0

--- a/module_0/Number_guess.ipynb
+++ b/module_0/Number_guess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "5"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,7 +27,7 @@
     "import numpy as np\n",
     "\n",
     "\n",
-    "def game_core_v3(number):\n",
+    "def game_core(number):\n",
     "    '''Сравнивается среднее значение предполагаемого промежутка с загаданным.\n",
     "       Промежуток корректируется в зависимости от того, больше загаданное число или меньше.\n",
     "       Функция принимает загаданное число и возвращает число попыток'''\n",
@@ -57,15 +57,8 @@
     "    return score\n",
     "\n",
     "\n",
-    "score_game(game_core_v3)"
+    "score_game(game_core)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
