--- a/module_1/Project_1.ipynb
+++ b/module_1/Project_1.ipynb
@@ -215,7 +215,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv('/Users/lyosik/SkillFactoryDS/PYTHON/movie_bd_v5.csv')\n",
+    "data = pd.read_csv('movie_bd_v5.csv')\n",
     "data.sample(5)"
    ]
   },
@@ -5170,7 +5170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
